--- a/bosh-deployment/bosh-lite-runc.yml
+++ b/bosh-deployment/bosh-lite-runc.yml
@@ -9,12 +9,12 @@
   path: /releases/-
   value:
     name: garden-runc
-    version: "1.1.1"
-    url: https://s3.amazonaws.com/bosh-compiled-release-tarballs/garden-runc-1.1.1-ubuntu-trusty-3421.9-20170621-054813-858784694-20170621054819.tgz?versionId=S53sWxU6eE_ChRsAnCCkzvi_JT9RGlNl
-    sha1: 9ff57b5d8467fb49d8f383a626b5f8f64e9efb76
+    version: "1.9.2"
+    url: https://s3.amazonaws.com/bosh-compiled-release-tarballs/garden-runc-1.9.2-ubuntu-trusty-3445.7-20170901-174605-756404527-20170901174611.tgz?versionId=ulUDAhslbDcla1qt6_D1.HkLRYbES18p
+    sha1: 8028f7e832b32f305bbd45b1636be23334805e2f
 
 - type: replace
-  path: /instance_groups/name=bosh/properties/garden
+  path: /instance_groups/name=bosh/jobs/name=garden/properties?/garden
   value:
     listen_network: tcp
     listen_address: 127.0.0.1:7777
