--- a/bosh-deployment/uaa.yml
+++ b/bosh-deployment/uaa.yml
@@ -2,9 +2,9 @@
   path: /releases/-
   value:
     name: uaa
-    version: "41"
-    url: https://s3.amazonaws.com/bosh-compiled-release-tarballs/uaa-41-ubuntu-trusty-3421.9-20170621-061436-615669844-20170621061441.tgz
-    sha1: e3c6e9baacb19158ff50281a8cda39a01563a5d8
+    version: "45"
+    url: https://s3.amazonaws.com/bosh-compiled-release-tarballs/uaa-45-ubuntu-trusty-3445.7-20170901-011657-278004037-20170901011704.tgz?versionId=Z4xSK_tLTPFa2BenVJ2M5rAa_CygCgo4
+    sha1: fdcfa0731490031e14cc411ae72d94b1341a482c
 
 # Switch Director to use UAA
 - type: replace
