--- a/manifests/kubo.yml
+++ b/manifests/kubo.yml
@@ -2,9 +2,7 @@ name: ((deployment_name))
 
 releases:
 - name: kubo-etcd
-  version: 2
-  url: https://storage.googleapis.com/kubo-public/kubo-etcd-2-ubuntu-trusty-3421.11-20170721-091603-591124789-20170721091609.tgz
-  sha1: 91f7a6592ee6c5242854f3654fe786574e816ffc
+  version: latest
 - name: kubo
   version: latest
 - name: docker
@@ -19,7 +17,7 @@ releases:
 stemcells:
 - alias: trusty
   os: ubuntu-trusty
-  version: "3421.11"
+  version: "3445.11"
 
 instance_groups:
 - name: etcd
