--- a/configurations/generic/project-config.yml
+++ b/configurations/generic/project-config.yml
@@ -30,7 +30,7 @@ master_target_pool: # target pool that master nodes will be a part of
 # Uncomment and configure the lines below to leverage CF routing instead of IaaS routing
 # routing_mode: cf
 # kubernetes_master_host: # Hostname of TCP router. Use `cf domains` to find existing TCP domain. If none exists, see https://docs.cloudfoundry.org/devguide/deploy-apps/routes-domains.html#shared-domains for instructions to create one.
-# kubernetes_master_port: # Port for kubernetes api-server on HA Proxy master node
+# kubernetes_master_port: # Port for kubernetes api-server to be registered with the Cloud Foundry TCP router
 # routing-cf-api-url: # TCP routing API URL. In PCF: https://api.<system domain>
 # routing-cf-client-id: # Routing UAA client name that will be used to register tcp routes
 # routing-cf-uaa-url: # Routing UAA URL In PCF: https://uaa.<system domain>
