Update bosh-deployment (3cb3c6e)
[#151603263]

subrepo:
  subdir:   "bosh-deployment"
  merged:   "3cb3c6e"
upstream:
  origin:   "https://github.com/cloudfoundry/bosh-deployment.git"
  branch:   "master"
  commit:   "3cb3c6e"
git-subrepo:
  version:  "0.3.1"
  origin:   "https://github.com/ingydotnet/git-subrepo"
  commit:   "a7ee886"
Signed-off-by: Tony Wong <twong@pivotal.io>

--- a/bosh-deployment/ci/compiled-releases/pipeline.yml
+++ b/bosh-deployment/ci/compiled-releases/pipeline.yml
@@ -297,10 +297,50 @@ jobs:
           - get: bosh-deployment
           - get: uaa-release
             version:
-              version: "45"
+              version: "45.3"
           - get: ubuntu-trusty-stemcell
             version:
               version: "3445.11"
+      - task: export-release
+        file: bosh-deployment/ci/compiled-releases/tasks/export-release.yml
+        privileged: true
+        input_mapping:
+          stemcell: ubuntu-trusty-stemcell
+          release: uaa-release
+      - put: compiled-releases
+        params:
+          file: "compiled-release/*.tgz"
+
+  - name: compile-uaa-release-50-ubuntu-trusty-3468
+    plan:
+      - aggregate:
+          - get: bosh-deployment
+          - get: uaa-release
+            version:
+              version: "50"
+          - get: ubuntu-trusty-stemcell
+            version:
+              version: "3468"
+      - task: export-release
+        file: bosh-deployment/ci/compiled-releases/tasks/export-release.yml
+        privileged: true
+        input_mapping:
+          stemcell: ubuntu-trusty-stemcell
+          release: uaa-release
+      - put: compiled-releases
+        params:
+          file: "compiled-release/*.tgz"
+
+  - name: compile-uaa-release-52-ubuntu-trusty-3468
+    plan:
+      - aggregate:
+          - get: bosh-deployment
+          - get: uaa-release
+            version:
+              version: "52"
+          - get: ubuntu-trusty-stemcell
+            version:
+              version: "3468"
       - task: export-release
         file: bosh-deployment/ci/compiled-releases/tasks/export-release.yml
         privileged: true
@@ -317,10 +357,90 @@ jobs:
         - get: bosh-deployment
         - get: credhub-release
           version:
-            version: "1.3.0"
+            version: "1.3.2"
         - get: ubuntu-trusty-stemcell
           version:
             version: "3445.11"
+      - task: export-release
+        file: bosh-deployment/ci/compiled-releases/tasks/export-release.yml
+        privileged: true
+        input_mapping:
+          stemcell: ubuntu-trusty-stemcell
+          release: credhub-release
+      - put: compiled-releases
+        params:
+          file: "compiled-release/*.tgz"
+
+  - name: compile-credhub-release-1.0.8-ubuntu-trusty-3421
+    plan:
+      - aggregate:
+        - get: bosh-deployment
+        - get: credhub-release
+          version:
+            version: "1.0.8"
+        - get: ubuntu-trusty-stemcell
+          version:
+            version: "3421.26"
+      - task: export-release
+        file: bosh-deployment/ci/compiled-releases/tasks/export-release.yml
+        privileged: true
+        input_mapping:
+          stemcell: ubuntu-trusty-stemcell
+          release: credhub-release
+      - put: compiled-releases
+        params:
+          file: "compiled-release/*.tgz"
+
+  - name: compile-credhub-release-1.3.4-ubuntu-trusty-3445
+    plan:
+      - aggregate:
+        - get: bosh-deployment
+        - get: credhub-release
+          version:
+            version: "1.3.4"
+        - get: ubuntu-trusty-stemcell
+          version:
+            version: "3445.11"
+      - task: export-release
+        file: bosh-deployment/ci/compiled-releases/tasks/export-release.yml
+        privileged: true
+        input_mapping:
+          stemcell: ubuntu-trusty-stemcell
+          release: credhub-release
+      - put: compiled-releases
+        params:
+          file: "compiled-release/*.tgz"
+
+  - name: compile-credhub-release-1.3.4-ubuntu-trusty-3468
+    plan:
+      - aggregate:
+        - get: bosh-deployment
+        - get: credhub-release
+          version:
+            version: "1.3.4"
+        - get: ubuntu-trusty-stemcell
+          version:
+            version: "3468"
+      - task: export-release
+        file: bosh-deployment/ci/compiled-releases/tasks/export-release.yml
+        privileged: true
+        input_mapping:
+          stemcell: ubuntu-trusty-stemcell
+          release: credhub-release
+      - put: compiled-releases
+        params:
+          file: "compiled-release/*.tgz"
+
+  - name: compile-credhub-release-1.5.0-ubuntu-trusty-3468
+    plan:
+      - aggregate:
+        - get: bosh-deployment
+        - get: credhub-release
+          version:
+            version: "1.5.0"
+        - get: ubuntu-trusty-stemcell
+          version:
+            version: "3445.7"
       - task: export-release
         file: bosh-deployment/ci/compiled-releases/tasks/export-release.yml
         privileged: true
@@ -379,7 +499,7 @@ jobs:
           - get: bosh-deployment
           - get: warden-cpi
             version:
-              version: "35"
+              version: "37"
           - get: ubuntu-trusty-stemcell
             version:
               version: "3445.11"
@@ -439,7 +559,7 @@ jobs:
           - get: bosh-deployment
           - get: garden-runc
             version:
-              version: "1.9.2"
+              version: "1.9.4"
           - get: ubuntu-trusty-stemcell
             version:
               version: "3445.11"
