--- a/bosh-deployment/credhub.yml
+++ b/bosh-deployment/credhub.yml
@@ -2,9 +2,9 @@
   path: /releases/-
   value:
     name: credhub
-    version: 1.3.0
-    url: https://s3.amazonaws.com/bosh-compiled-release-tarballs/credhub-1.3.0-ubuntu-trusty-3445.7-20170911-224936-579012406-20170911224941.tgz?versionId=mVgwizzoZJFFPwgaXGYNFWZtbDL2AVtO
-    sha1: ce3e30b5b719a0b1a6445206f36371d2cd7c8175
+    version: 1.5.0
+    url: https://s3.amazonaws.com/bosh-compiled-release-tarballs/credhub-1.5.0-ubuntu-trusty-3445.7-20171010-224932-312558772-20171010224936.tgz?versionId=foI.VuVtyJ5sCeL_yjztJ6J1DzcVNF7j
+    sha1: 7f5f6f55fe64d4ea79c1e0432e2972f4530af41b
 
 - type: replace
   path: /instance_groups/name=bosh/jobs/-
