--- a/bosh-deployment/runtime-configs/dns.yml
+++ b/bosh-deployment/runtime-configs/dns.yml
@@ -1,12 +1,41 @@
 releases:
 - name: bosh-dns
-  version: 0.0.7
-  url: https://bosh.io/d/github.com/cloudfoundry/dns-release?v=0.0.7
-  sha1: 5bcbf78b69767f04dd8be4314197142181e82357
+  version: 0.0.8
+  url: https://bosh.io/d/github.com/cloudfoundry/dns-release?v=0.0.8
+  sha1: f43c79eea8115915f507ba3dd2936cb1ec33fdf4
 
 addons:
 - name: bosh-dns
   jobs:
   - name: bosh-dns
     release: bosh-dns
-    properties: {}
+    properties:
+      health:
+        enabled: true
+        server:
+          tls: ((/dns_healthcheck_server_tls))
+        client:
+          tls: ((/dns_healthcheck_client_tls))
+
+variables:
+- name: /dns_healthcheck_tls_ca
+  type: certificate
+  options:
+    is_ca: true
+    common_name: dns-healthcheck-tls-ca
+
+- name: /dns_healthcheck_server_tls
+  type: certificate
+  options:
+    ca: /dns_healthcheck_tls_ca
+    common_name: health.bosh-dns
+    extended_key_usage:
+    - server_auth
+
+- name: /dns_healthcheck_client_tls
+  type: certificate
+  options:
+    ca: /dns_healthcheck_tls_ca
+    common_name: health.bosh-dns
+    extended_key_usage:
+    - client_auth
