Collocate kubo-dns-aliases job on route-sync instance
[#151603263]

Signed-off-by: Brenda Chan <brchan@pivotal.io>

--- a/manifests/ops-files/cf-routing.yml
+++ b/manifests/ops-files/cf-routing.yml
@@ -32,6 +32,8 @@
     - name: ((deployments_network))
     azs: [z1]
     jobs:
+    - name: kubo-dns-aliases
+      release: kubo
     - name: kubeconfig
       release: kubo
       properties:
