--- a/manifests/kubo.yml
+++ b/manifests/kubo.yml
@@ -62,6 +62,7 @@ instance_groups:
       kubelet-password: ((kubelet-password))
       backend_port: 8443 # Bosh links hack
       port: ((kubernetes_master_port))
+      authorization-mode: rbac
       tls:
         kubernetes: ((tls-kubernetes))
   - name: kubeconfig
@@ -165,10 +166,12 @@ variables:
     ca: kubo_ca
     common_name: ((kubernetes_master_host))
     alternative_names: [((kubernetes_master_host))]
+    organization: "system:nodes"
 - name: tls-kubernetes
   type: certificate
   options:
     ca: kubo_ca
+    organization: "system:masters"
     common_name: ((kubernetes_master_host))
     alternative_names:
     - ((kubernetes_master_host))
