Add parameters to kubernetes-system-specs

--- a/manifests/kubo.yml
+++ b/manifests/kubo.yml
@@ -78,6 +78,9 @@ instance_groups:
     release: kubo
   - name: kubernetes-system-specs
     release: kubo
+    properties:
+      admin-username: admin
+      authorization-mode: rbac
   stemcell: trusty
   vm_type: master
 
