Make the API URL accessible via the manifest again
[#150696020]

--- a/manifests/kubo.yml
+++ b/manifests/kubo.yml
@@ -121,6 +121,7 @@ instance_groups:
   - name: kubeconfig
     release: kubo
     properties:
+      kubernetes-api-url: "https://((kubernetes_master_host)):((kubernetes_master_port))"
       kubelet-password: ((kubelet-password))
       tls:
         kubernetes: ((tls-kubernetes))
