Alternative names key is required in variables
Even if it is empty

Signed-off-by: Carlo Colombo <ccolombo@pivotal.io>

--- a/manifests/kubo.yml
+++ b/manifests/kubo.yml
@@ -169,6 +169,7 @@ variables:
   options:
     ca: kubo_ca
     common_name: kubelet.kubo.internal
+    alternative_names: []
     organization: "system:nodes"
 - name: tls-kubernetes
   type: certificate
