--- a/manifests/ops-files/master-static-ip-openstack.yml
+++ b/manifests/ops-files/master-static-ip-openstack.yml
@@ -1,6 +1,6 @@
 - type: replace
-  path: /instance_groups/name=master/networks
+  path: /instance_groups/name=master/networks/-
   value:
-  - name: vip
+    name: vip
     type: vip
     static_ips: [((kubernetes_master_host))]
