--- a/bosh-deployment/aws/cpi.yml
+++ b/bosh-deployment/aws/cpi.yml
@@ -3,31 +3,35 @@
   path: /releases/-
   value:
     name: bosh-aws-cpi
-    version: 66
-    url: https://bosh.io/d/github.com/cloudfoundry-incubator/bosh-aws-cpi-release?v=66
-    sha1: 117d5518f1b1de8937c163244de8db45ad8ce1a9
+    version: 67
+    url: https://bosh.io/d/github.com/cloudfoundry-incubator/bosh-aws-cpi-release?v=67
+    sha1: cfcbc98affa9cad674087ab6b8bd4b1188b18439
 
 - type: replace
   path: /resource_pools/name=vms/stemcell?
   value:
-    url: https://bosh.io/d/stemcells/bosh-aws-xen-hvm-ubuntu-trusty-go_agent?v=3445.7
-    sha1: ad82e910dc07b1ef4fe475776e11adbc83470538
+    url: https://bosh.io/d/stemcells/bosh-aws-xen-hvm-ubuntu-trusty-go_agent?v=3468.1
+    sha1: 741c71747118200c9251545883e184c43c059da9
 
 # Configure AWS sizes
 - type: replace
   path: /resource_pools/name=vms/cloud_properties?
   value:
     instance_type: m4.xlarge
-    ephemeral_disk: {size: 25_000, type: gp2}
+    ephemeral_disk:
+      type: gp2
+      size: 25_000
     availability_zone: ((az))
 
 - type: replace
   path: /disk_pools/name=disks/cloud_properties?
-  value: {type: gp2}
+  value:
+    type: gp2
 
 - type: replace
   path: /networks/name=default/subnets/0/cloud_properties?
-  value: {subnet: ((subnet_id))}
+  value:
+    subnet: ((subnet_id))
 
 # Enable registry job
 - type: replace
