--- a/bosh-deployment/bosh-lite-docker.yml
+++ b/bosh-deployment/bosh-lite-docker.yml
@@ -18,9 +18,9 @@
   path: /releases/name=os-conf?
   value:
     name: os-conf
-    version: 12
-    url: https://bosh.io/d/github.com/cloudfoundry/os-conf-release?v=12
-    sha1: af5a2c9f228b9d7ec4bd051d71fef0e712fa1549
+    version: 18
+    url: https://bosh.io/d/github.com/cloudfoundry/os-conf-release?v=18
+    sha1: 78d79f08ff5001cc2a24f572837c7a9c59a0e796
 
 - type: replace
   path: /instance_groups/name=bosh/jobs/-
@@ -97,3 +97,7 @@
       common_name: client
       extended_key_usage:
       - client_auth
+
+- type: replace
+  path: /variables/name=nats_server_tls/options/alternative_names?/-
+  value: "10.254.50.4"
