--- a/bosh-deployment/bosh.yml
+++ b/bosh-deployment/bosh.yml
@@ -3,9 +3,9 @@ name: bosh
 
 releases:
 - name: bosh
-  version: "263.2.0"
-  url: https://s3.amazonaws.com/bosh-compiled-release-tarballs/bosh-263.2.0-ubuntu-trusty-3445.7-20170915-052445-759948783-20170915052451.tgz?versionId=3kjVQuRK7JyrnbKEbKhLRi7qyo0wBXZJ
-  sha1: 37630c636a030454d55703cfdd495d733525353f
+  version: "264.1"
+  url: https://s3.amazonaws.com/bosh-compiled-release-tarballs/bosh-264.1-ubuntu-trusty-3468.1-20171109-004207-628092428-20171109004211.tgz?versionId=46RkXfd52MvTfE_IXpC.P9x1Tfv09qkB
+  sha1: f262d1c35f3646a3f0394132f2705719c9d2bb6a
 
 resource_pools:
 - name: vms
@@ -45,9 +45,23 @@ instance_groups:
     static_ips: [((internal_ip))]
   properties:
     nats:
-      address: 127.0.0.1
+      address: ((internal_ip))
       user: nats
       password: ((nats_password))
+      tls:
+        ca: ((nats_server_tls.ca))
+        client_ca:
+          certificate: ((nats_ca.certificate))
+          private_key: ((nats_ca.private_key))
+        server:
+          certificate: ((nats_server_tls.certificate))
+          private_key: ((nats_server_tls.private_key))
+        director:
+          certificate: ((nats_clients_director_tls.certificate))
+          private_key: ((nats_clients_director_tls.private_key))
+        health_monitor:
+          certificate: ((nats_clients_health_monitor_tls.certificate))
+          private_key: ((nats_clients_health_monitor_tls.private_key))
     postgres: &db
       listen_address: 127.0.0.1
       host: 127.0.0.1
@@ -125,20 +139,54 @@ variables:
   type: password
 - name: postgres_password
   type: password
+
 - name: default_ca
   type: certificate
   options:
     is_ca: true
     common_name: ca
+
 - name: mbus_bootstrap_ssl
   type: certificate
   options:
     ca: default_ca
     common_name: ((internal_ip))
     alternative_names: [((internal_ip))]
+
 - name: director_ssl
   type: certificate
   options:
     ca: default_ca
     common_name: ((internal_ip))
     alternative_names: [((internal_ip))]
+
+- name: nats_ca
+  type: certificate
+  options:
+    is_ca: true
+    common_name: default.nats-ca.bosh-internal
+
+- name: nats_server_tls
+  type: certificate
+  options:
+    ca: nats_ca
+    common_name: default.nats.bosh-internal
+    alternative_names: [((internal_ip))]
+    extended_key_usage:
+    - server_auth
+
+- name: nats_clients_director_tls
+  type: certificate
+  options:
+    ca: nats_ca
+    common_name: default.director.bosh-internal
+    extended_key_usage:
+    - client_auth
+
+- name: nats_clients_health_monitor_tls
+  type: certificate
+  options:
+    ca: nats_ca
+    common_name: default.hm.bosh-internal
+    extended_key_usage:
+    - client_auth
